--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,41 +1,41 @@
-<article class="py-8" itemscope itemtype="http://schema.org/BlogPosting">
+<article itemscope itemtype="http://schema.org/BlogPosting">
     {% for block in section.blocks %}
         {% case block.type %}
             {% when 'article_title' %}
-                <div class="flex items-center justify-center">
-                    <div class="max-w-7xl text-center">
-                        <a href="{{ blog.url }}" class="text-base uppercase text-gray-500 hover:text-gray-900 font-bold">{{ blog.title }}</a>
-                        <h1 class="text-4xl md:text-6xl font-medium" itemprop="headline">{{ article.title }}</h1>
+                <div>
+                    <div>
+                        <a href="{{ blog.url }}">{{ blog.title }}</a>
+                        <h1 itemprop="headline">{{ article.title }}</h1>
                     </div>
                 </div>
             {% when 'article_author' %}
-                <div class="flex items-center justify-center">
-                    <div class="max-w-7xl text-center" itemscope itemtype="http://schema.org/Person">
+                <div>
+                    <div itemscope itemtype="http://schema.org/Person">
                         {% if section.settings.enable_author %}
                             <small itemprop="author">{{ article.author }}</small>
                         {% endif %}
                     </div>
                 </div>
             {% when 'article_published_date' %}
-                <div class="flex items-center justify-center">
-                    <div class="max-w-7xl text-center">
+                <div>
+                    <div>
                         {% if section.settings.enable_published_date %}
                             <time itemprop="datePublished dateCreated" datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: format: 'on_date' }}</time>
                         {% endif %}
                     </div>
                 </div>
             {% when 'featured_image' %}
-                <div class="max-w-7xl bg-blue-100 rounded-lg mx-2 md:mx-auto overflow-hidden my-4" itemprop="image">
+                <div itemprop="image">
                     {% if article.image != blank %}
-                        <img class="w-full h-80 md:h-96 object-cover object-center" src="{{ article.image | img_url: 'large' }}" alt="{{ article.image.alt }}"/>
+                        <img src="{{ article.image | img_url: 'large' }}" alt="{{ article.image.alt }}"/>
                     {% else %}
                         {% assign placeholder_image = 'lifestyle-1' %}
                         {{ placeholder_image | placeholder_svg_tag: 'w-full h-80 md:h-96 object-cover object-center p-5' }}
                     {% endif %}
                 </div>
             {% when 'article_content' %}
-                <div class="flex items-center justify-center">
-                    <div class="max-w-4xl mt-5 p-4" itemprop="articleBody">
+                <div>
+                    <div itemprop="articleBody">
                         {{ article.content }}
                     </div>
                 </div>
@@ -45,21 +45,21 @@
 </article>
 
 {% if blog.comments_enabled? %}
-    <div class="my-8" id="comments">
+    <div id="comments">
         {% if article.comments_count > 0 %}
-            <div class="flex-1 items-center justify-center mx-auto max-w-4xl px-4">
-                <h1 class="text-lg mb-4 font-medium">See what people are saying...</h1>
+            <div>
+                <h1>See what people are saying...</h1>
 
                 {% paginate article.comments by 5 %}
                     {% for comment in article.comments %}
-                        <div class="flex-1 border my-4 px-4 py-2 sm:py-4 leading-relaxed">
-                            <span class="comment-author">{{ comment.author }}</span>
-                            <span class="text-xs text-gray-400">{{ comment.created_at | date: format: 'default' }}</span>
-                            <p class="text-sm">{{ comment.content }}</p>
+                        <div>
+                            <span>{{ comment.author }}</span>
+                            <span>{{ comment.created_at | date: format: 'default' }}</span>
+                            <p>{{ comment.content }}</p>
                         </div>
                     {% endfor %}
 
-                    <div class="max-w-6xl mx-auto">
+                    <div>
                         {% render 'pagination', pagination: paginate %}
                     </div>
                 {% endpaginate %}
@@ -70,22 +70,22 @@
         {% endif %}
     </div>
 
-    <div class="mb-8" id="comment_form">
+    <div id="comment_form">
         {% form 'new_comment', article %}
-            <div class="flex-1 mx-auto items-center justify-center max-w-4xl px-4">
+            <div>
                 {% if form.errors %}
-                    <div class="border p-5">
-                        <div class="flex flex-row items-center w-full my-3">
-                            <div class="text-red-500">
+                    <div>
+                        <div>
+                            <div>
                                 {% include 'icon-error' %}
                             </div>
 
-                            <div class="text-sm font-medium ml-3">
+                            <div>
                                 Oh No! Your comment could not be posted.
                             </div>
                         </div>
 
-                        <ul class="px-4 mb-3 ml-7 list-decimal">
+                        <ul>
                             {% for error in form.errors %}
                                 <li>
                                     <span>{{ form.errors.messages[error] }}</span>
@@ -94,39 +94,39 @@
                         </ul>
                     </div>
                 {% elsif form.posted_successfully? %}
-                    <div class="flex flex-row items-center w-full my-3 p-5">
-                        <div class="text-green-500">
+                    <div>
+                        <div>
                             {% include 'icon-success' %}
                         </div>
 
-                        <div class="text-sm font-medium ml-3">
+                        <div>
                             Your comment has been posted!
                         </div>
                     </div>
                 {% endif %}
 
-                <div class="px-1 md:flex mb-3">
-                    <div class="px-3 md:w-1/2">
-                        <label class="text-gray-700 font-medium uppercase text-xs mb-2" for="comment_author">Name</label>
-                        <input class="w-full text-gray-700 border border-gray-200 py-3 px-4 mb-3" id="comment_author" name="comment[author]" placeholder="Your Name" required type="text">
+                <div>
+                    <div>
+                        <label for="comment_author">Name</label>
+                        <input id="comment_author" name="comment[author]" placeholder="Your Name" required type="text">
                     </div>
 
-                    <div class="px-3 md:w-1/2">
-                        <label class="text-gray-700 font-medium uppercase text-xs mb-2" for="comment_email">Email</label>
-                        <input class="w-full text-gray-700 border border-gray-200 py-3 px-4 mb-3" id="comment_email" name="comment[email]" placeholder="Your Email Address" required type="email">
-                    </div>
-                </div>
-
-                <div class="px-1 md:flex mb-3">
-                    <div class="md:w-full px-3">
-                        <label class="text-gray-700 font-medium uppercase text-xs mb-2" for="comment_content">Comment</label>
-                        <textarea class="w-full text-gray-700 border border-gray-200 resize-none py-2 px-3 focus:outline-none h-20" id="comment_content" name="comment[body]" placeholder="Your Comment" required></textarea>
+                    <div>
+                        <label for="comment_email">Email</label>
+                        <input id="comment_email" name="comment[email]" placeholder="Your Email Address" required type="email">
                     </div>
                 </div>
 
-                <div class="px-1 md:flex mb-3">
-                    <div class="md:w-full px-3">
-                        <input class="w-full cursor-pointer px-4 py-2 border text-base font-medium text-white bg-gray-900 hover:bg-gray-500" type="submit" value="Post comment">
+                <div>
+                    <div>
+                        <label for="comment_content">Comment</label>
+                        <textarea id="comment_content" name="comment[body]" placeholder="Your Comment" required></textarea>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <input type="submit" value="Post comment">
                     </div>
                 </div>
             </div>
