--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -1,23 +1,23 @@
-<div class="py-8">
+<div>
     {% paginate blog.articles by section.settings.number_of_blog_posts %}
 
-        <h1 class="text-center text-3xl">{{ blog.title }}</h1>
+        <h1>{{ blog.title }}</h1>
 
-        <div class="max-w-6xl mx-auto">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <div>
+            <div>
                 {% for article in blog.articles %}
-                    <div class="w-full py-6 px-3">
-                        <div class="bg-white shadow-xl rounded-lg overflow-hidden">
+                    <div>
+                        <div>
                             {% if article.image %}
                                 <a href="{{ article.url }}" ">
-                                    <img class="w-full h-80 object-cover" src="{{ article.image | img_url: 'medium' }}" alt="" {{ article.image.alt }}>
+                                    <img src="{{ article.image | img_url: 'medium' }}" alt="" {{ article.image.alt }}>
                                 </a>
                             {% else %}
                                 {{ 'image' | placeholder_svg_tag: 'w-full h-80 object-cover bg-gray-100' }}
                             {% endif %}
 
-                            <div class="p-4">
-                                <h1 class="text-xl font-medium my-4">{{ article.title }}</h1>
+                            <div>
+                                <h1>{{ article.title }}</h1>
 
                                 {% if article.excerpt.size > 0 %}
                                     <p>{{ article.excerpt | strip_html | truncatewords: 15 }}</p>
@@ -25,7 +25,7 @@
                                     <p>{{ article.content | strip_html | truncatewords: 15 }}</p>
                                 {% endif %}
 
-                                <a href="{{ article.url }}" class="font-medium text-blue-600 hover:text-blue-800 my-4 block">{{ section.settings.blog_read_more }}</a>
+                                <a href="{{ article.url }}">{{ section.settings.blog_read_more }}</a>
                             </div>
                         </div>
                     </div>
