--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,10 +1,10 @@
-<div class="px-4 py-8">
-    <a class="text-base text-gray-500 hover:underline text-center block my-4" href="{{ routes.collections_url }}">Go back to collections</a>
+<div>
+    <a href="{{ routes.collections_url }}">Go back to collections</a>
     {% paginate collection.products by section.settings.number_of_products_per_page %}
-        <h1 class="text-3xl text-center">{{ collection.title }}</h1>
+        <h1>{{ collection.title }}</h1>
 
-        <div class="max-w-6xl mx-auto">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <div>
+            <div>
                 {% for product in collection.products %}
                     {% render 'product-card', product_product: product %}
                 {% else %}
