--- a/sections/template-customer-password.liquid
+++ b/sections/template-customer-password.liquid
@@ -1,31 +1,31 @@
-<div class="h-full flex items-center justify-center py-12 px-6 md:px-4 lg:px-8">
-    <div class="max-w-md w-full space-y-8">
-        <div>
-            <h1 class="text-center text-3xl font-bold mt-6">Reset your password</h1>
-        </div>
-        <div class="mt-8">
-            {% form 'reset_customer_password' %}
-                {% if form.errors %}
-                    <div class="relative border border-red-400 bg-red-100 text-red-700 px-4 py-3" role="alert">
-                        <strong class="font-bold">Error!</strong>
-                        <p class="block sm:inline">{{ form.errors | default_errors }}</p>
-                    </div>
-                {% endif %}
+<div>
+  <div>
+      <div>
+          <h1>Reset your password</h1>
+      </div>
+      <div>
+          {% form 'reset_customer_password' %}
+              {% if form.errors %}
+                  <div role="alert">
+                      <strong>Error!</strong>
+                      <p>{{ form.errors | default_errors }}</p>
+                  </div>
+              {% endif %}
 
-                <div class="my-2">
-                    <label class="sr-only" for="password">Password</label>
-                    <input autocomplete="new-password" class="relative block w-full px-3 py-2 border" id="password" name="customer[password]" placeholder="Password" type="password">
-                </div>
+              <div>
+                  <label class="sr-only" for="password">Password</label>
+                  <input autocomplete="new-password" id="password" name="customer[password]" placeholder="Password" type="password">
+              </div>
 
-                <div class="my-2">
-                    <label class="sr-only" for="password_confirmation">Password Confirmation</label>
-                    <input autocomplete="new-password" class="relative block w-full px-3 py-2 border" id="password_confirmation" name="customer[password_confirmation]" placeholder="Confirm your password" type="password">
-                </div>
+              <div class="my-2">
+                  <label class="sr-only" for="password_confirmation">Password Confirmation</label>
+                  <input autocomplete="new-password" id="password_confirmation" name="customer[password_confirmation]" placeholder="Confirm your password" type="password">
+              </div>
 
-                <div>
-                    <button class="relative w-full py-2 px-4 text-sm font-medium text-white bg-gray-600 hover:bg-gray-900" type="submit">Reset password</button>
-                </div>
-            {% endform %}
-        </div>
-    </div>
+              <div>
+                  <button type="submit">Reset password</button>
+              </div>
+          {% endform %}
+      </div>
+  </div>
 </div>
