--- a/sections/template-customer-register.liquid
+++ b/sections/template-customer-register.liquid
@@ -1,46 +1,46 @@
-<div class="h-full flex items-center justify-center py-12 px-6 md:px-4 lg:px-8">
-    <div class="max-w-md w-full space-y-8">
-        <div>
-            <h1 class="text-center text-3xl font-bold mt-6">Register an account</h1>
-        </div>
-        <div class="mt-8">
-            {% form 'create_customer' %}
-                {% if form.errors %}
-                    <div class="relative border border-red-400 bg-red-100 text-red-700 px-4 py-3" role="alert">
-                        <strong class="font-bold">Error!</strong>
-                        <p class="block sm:inline">{{ form.errors | default_errors }}</p>
-                    </div>
-                {% endif %}
+<div>
+  <div>
+      <div>
+          <h1>Register an account</h1>
+      </div>
+      <div>
+          {% form 'create_customer' %}
+              {% if form.errors %}
+                  <div role="alert">
+                      <strong>Error!</strong>
+                      <p>{{ form.errors | default_errors }}</p>
+                  </div>
+              {% endif %}
 
-                <div class="my-2">
-                    <label class="sr-only" for="first_name">First name</label>
-                    <input autocomplete="given-name" class="relative block w-full px-3 py-2 border" id="first_name" name="customer[first_name]" placeholder="First name" type="text">
-                </div>
+              <div>
+                  <label class="sr-only" for="first_name">First name</label>
+                  <input autocomplete="given-name" id="first_name" name="customer[first_name]" placeholder="First name" type="text">
+              </div>
 
-                <div class="my-2">
-                    <label class="sr-only" for="last_name">Last name</label>
-                    <input autocomplete="family-name" class="relative block w-full px-3 py-2 border" id="last_name" name="customer[last_name]" placeholder="Last name" type="text">
-                </div>
+              <div>
+                  <label class="sr-only" for="last_name">Last name</label>
+                  <input autocomplete="family-name" id="last_name" name="customer[last_name]" placeholder="Last name" type="text">
+              </div>
 
-                <div class="my-2">
-                    <label class="sr-only" for="birthday">Birthday</label>
-                    <input class="relative block w-full px-3 py-2 border" id="birthday" name="customer[note][Birthday]" type="date">
-                </div>
+              <div>
+                  <label class="sr-only" for="birthday">Birthday</label>
+                  <input id="birthday" name="customer[note][Birthday]" type="date">
+              </div>
 
-                <div class="my-2">
-                    <label class="sr-only" for="email_address">Email address</label>
-                    <input autocomplete="email" class="relative block w-full px-3 py-2 border" id="email_address" name="customer[email]" placeholder="Email address" type="email">
-                </div>
+              <div>
+                  <label class="sr-only" for="email_address">Email address</label>
+                  <input autocomplete="email" id="email_address" name="customer[email]" placeholder="Email address" type="email">
+              </div>
 
-                <div class="my-2">
-                    <label class="sr-only" for="password">Password</label>
-                    <input autocomplete="new-password" class="relative block w-full px-3 py-2 border" id="password" name="customer[password]" placeholder="Password" type="password">
-                </div>
+              <div class="my-2">
+                  <label class="sr-only" for="password">Password</label>
+                  <input autocomplete="new-password" id="password" name="customer[password]" placeholder="Password" type="password">
+              </div>
 
-                <div>
-                    <button class="relative w-full py-2 px-4 text-sm font-medium text-white bg-gray-600 hover:bg-gray-900" type="submit">Create account</button>
-                </div>
-            {% endform %}
-        </div>
-    </div>
+              <div>
+                  <button type="submit">Create account</button>
+              </div>
+          {% endform %}
+      </div>
+  </div>
 </div>
