--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -1,79 +1,63 @@
-<link href="https://unpkg.com/swiper@7/swiper-bundle.min.css" rel="stylesheet"/>
-<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-
 {% assign selected_variant = product.selected_or_first_available_variant %}
 
-<style>
-    .swiper-button-prev, .swiper-button-next { color: black; top: auto !important; height: 20px; }
-    .swiper-button-prev::after, .swiper-button-next::after { font-size: 20px; }
-    .swiper-pagination { color: black; bottom: 0 !important; }
-    .swiper-pagination-bullet-active { background: black !important; }
-    .product--information { height: fit-content; }
-</style>
-
-<div class="max-w-6xl mx-auto my-8">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
-        <div class="product--medias">
-            <div class="hidden md:block">
+<div>
+    <div>
+        <div>
+            <div>
                 {% for media in product.media %}
-                    <div class="h-100 overflow-hidden p-2">
+                    <div>
                         {% render 'product-media', media: media %}
                     </div>
                 {% endfor %}
             </div>
 
-            <div class="md:hidden">
-                <div class="swiper">
-                    <div class="swiper-wrapper">
+            <div>
+                <div>
+                    <div>
                         {% for media in product.media %}
-                            <div class="swiper-slide">
-                                <div class="h-[100vw] overflow-hidden p-2">
+                            <div>
+                                <div>
                                     {% render 'product-media', media: media %}
                                 </div>
                             </div>
                         {% endfor %}
                     </div>
-
-                    <div class="swiper-pagination"></div>
-
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
                 </div>
             </div>
         </div>
 
-        <div class="product--information sticky top-5 p-2">
+        <div>
             {% form 'product', product, id: 'product-form', novalidate: 'novalidate' %}
                 <input type="hidden" name="id" value="{{ selected_variant.id }}">
 
                 {% for block in section.blocks %}
                     {% case block.type %}
                         {% when 'vendor' %}
-                            <div class="my-3">
-                                <span class="text-xs text-gray-500">{{ product.vendor }}</span>
+                            <div>
+                                <span>{{ product.vendor }}</span>
                             </div>
                         {% when 'title' %}
-                            <div class="my-3">
-                                <h1 class="text-3xl text-gray-900">{{ product.title }}</h1>
+                            <div>
+                                <h1>{{ product.title }}</h1>
                             </div>
                         {% when 'price' %}
-                            <div class="my-3" id="price-{{ section.id }}">
-                                <span class="text-base text-gray-500 line-through">{{ selected_variant.compare_at_price | money }}</span>
-                                <span class="text-lg text-gray-900">{{ selected_variant.price | money }}</span>
+                            <div id="price-{{ section.id }}">
+                                <span>{{ selected_variant.compare_at_price | money }}</span>
+                                <span>{{ selected_variant.price | money }}</span>
 
                                 {% if selected_variant.price < selected_variant.compare_at_price %}
-                                    <span class="px-5 py-1 text-sm font-bold bg-red-500 rounded-full text-white mx-4">Sale</span>
+                                    <span>Sale</span>
                                 {% endif %}
                             </div>
                         {% when 'variant_selector' %}
-                            <div class="my-3">
+                            <div>
                                 {% unless product.has_only_default_variant %}
                                     <variant-selector data-url="{{ product.url }}" data-section="{{ section.id }}">
                                         {% for option in product.options_with_values %}
                                             <label for="Option-{{ section.id }}-{{ forloop.index0 }}">{{ option.name }}</label>
 
-                                            <div class="my-2">
-                                                <select class="w-full border py-3 px-3" id="Option-{{ section.id }}-{{ forloop.index0 }}" name="options[{{ option.name | escape }}]">
+                                            <div>
+                                                <select id="Option-{{ section.id }}-{{ forloop.index0 }}" name="options[{{ option.name | escape }}]">
                                                     {% for value in option.values %}
                                                         <option value="{{ value | escape }}" {% if option.selected_value == value %} selected="selected" {% endif %}>
                                                             {{ value }}
@@ -94,21 +78,21 @@
                             </div>
 
                         {% when 'quantity' %}
-                            <div class="my-3">
+                            <div>
                                 <label for="Quantity-{{ section.id }}">Quantity</label>
 
-                                <div class="my-2">
-                                    <input class="w-full border px-3 py-3" id="Quantity-{{ section.id }}" min="1" name="quantity" type="number" value="1">
+                                <div>
+                                    <input id="Quantity-{{ section.id }}" min="1" name="quantity" type="number" value="1">
                                 </div>
                             </div>
                         {% when 'description' %}
-                            <div class="my-3">
-                                <p class="text-gray-700">{{ product.description }}</p>
+                            <div>
+                                <p>{{ product.description }}</p>
                             </div>
 
                         {% when 'checkout_buttons' %}
-                            <div class="my-3">
-                                <button type="submit" name="add" class="w-full px-6 py-4 bg-gray-900 text-white hover:bg-gray-700 rounded-sm my-2" {% if selected_variant.available == false %} disabled {% endif %}>
+                            <div>
+                                <button type="submit" name="add" {% if selected_variant.available == false %} disabled {% endif %}>
                                     {% if selected_variant.available == false %}
                                         Sold out
                                     {% else %}
@@ -184,22 +168,6 @@
     customElements.define("variant-selector", VariantSelector);
 </script>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        try {
-            const swiper = new Swiper('.swiper', {
-                    direction: 'horizontal',
-                    pagination: {
-                        el: '.swiper-pagination'
-                    },
-                    navigation: {
-                        prevEl: '.swiper-button-prev',
-                        nextEl: '.swiper-button-next'
-                }
-            })
-        } catch(e) { console.log("SwiperJS is not defined"); }
-    })
-</script>
 
 {% schema %}
 {
