--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -1,48 +1,47 @@
 <div>
-  <h1>{{ section.settings.title }}</h1>
+  <h1>{{ section.settings.title }}
+  </h1>
 
   <div>
-      <div>
-          {% for product in section.settings.featured_collection.products limit: section.settings.number_of_products_to_show %}
-              {% render 'product-card', product_product: product %}
-          {% else %}
-              {% for item in (1..4) %}
-                  {% render 'product-card-placeholder' %}
-              {% endfor %}
-          {% endfor %}
-      </div>
+    <div>
+      {% for product in section.settings.featured_collection.products limit: section.settings.number_of_products_to_show %}
+        {% render 'product-card', product_product: product %}
+      {% else %}
+        {% for item in (1..4) %}
+          {% render 'product-card-placeholder' %}
+        {% endfor %}
+      {% endfor %}
+    </div>
   </div>
 </div>
 
 
 {% schema %}
-{
-  "name": "Featured Collection",
-  "settings": [
+  {
+    "name": "Featured Collection",
+    "settings": [
       {
-          "type": "text",
-          "id": "title",
-          "default": "Featured Collection",
-          "label": "Title"
-      },
-      {
-          "type": "collection",
-          "id": "featured_collection",
-          "label": "Collection"
-      },
-      {
-          "type": "range",
-          "id": "number_of_products_to_show",
-          "min": 4,
-          "max": 12,
-          "default": 4,
-          "label": "Number of products to show"
+        "type": "text",
+        "id": "title",
+        "default": "Featured Collection",
+        "label": "Title"
+      }, {
+        "type": "collection",
+        "id": "featured_collection",
+        "label": "Collection"
+      }, {
+        "type": "range",
+        "id": "number_of_products_to_show",
+        "min": 4,
+        "max": 12,
+        "default": 4,
+        "label": "Number of products to show"
       }
-  ],
-  "presets": [
+    ],
+    "presets": [
       {
-          "name": "Featured Collection"
+        "name": "Featured Collection"
       }
-  ]
-}
-{% endschema %}
+    ]
+  }
+{% endschema %}}}
