--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div class="max-w-6xl mx-auto">
+        <div>
             {% render 'pagination', pagination: paginate %}
         </div>
     {% endpaginate %}
