--- a/sections/template-customer-password.liquid
+++ b/sections/template-customer-password.liquid
@@ -17,7 +17,7 @@
                   <input autocomplete="new-password" id="password" name="customer[password]" placeholder="Password" type="password">
               </div>
 
-              <div class="my-2">
+              <div>
                   <label class="sr-only" for="password_confirmation">Password Confirmation</label>
                   <input autocomplete="new-password" id="password_confirmation" name="customer[password_confirmation]" placeholder="Confirm your password" type="password">
               </div>
