--- a/sections/template-customer-register.liquid
+++ b/sections/template-customer-register.liquid
@@ -32,7 +32,7 @@
                   <input autocomplete="email" id="email_address" name="customer[email]" placeholder="Email address" type="email">
               </div>
 
-              <div class="my-2">
+              <div>
                   <label class="sr-only" for="password">Password</label>
                   <input autocomplete="new-password" id="password" name="customer[password]" placeholder="Password" type="password">
               </div>
